--- a/index.html
+++ b/index.html
@@ -1,211 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>AceNodes Cart + Checkout</title>
-<script src="https://js.stripe.com/v3/"></script>
-<style>
-  body {
-    margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: #121212;
-    color: #eee;
-  }
-
-  /* Floating Cart Button */
-  .cart-button {
-    position: fixed;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
-    background: #1db954;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    z-index: 1000;
-  }
-  .cart-button:hover { background: #17a64a; transform: translateY(-50%) scale(1.05);}
-  .cart-button svg { width:28px; height:28px; fill:#121212; }
-
-  /* Cart Panel */
-  .cart-panel {
-    position: fixed;
-    top:0;
-    right:-320px;
-    width:300px;
-    height:100%;
-    background:#1e1e1e;
-    box-shadow:-2px 0 10px rgba(0,0,0,0.7);
-    display:flex;
-    flex-direction:column;
-    transition: right 0.3s ease;
-    z-index: 900;
-  }
-  .cart-panel.open { right:0; }
-
-  .cart-header {
-    background:#1db954;
-    color:#121212;
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    padding:1rem;
-    font-weight:bold;
-  }
-  .close-cart { background:transparent; border:none; font-size:1.4rem; color:#121212; cursor:pointer; }
-
-  .cart-items { flex-grow:1; padding:1rem; overflow-y:auto;}
-  .cart-items p { color:#ccc; font-size:0.95rem; }
-
-  .cart-footer { padding:1rem; border-top:1px solid #333; display:flex; justify-content:space-between; align-items:center;}
-  .checkout-btn { background:#1db954; border:none; color:#121212; font-weight:bold; padding:0.5rem 1rem; border-radius:4px; cursor:pointer;}
-  .checkout-btn:hover { background:#17a64a; }
-
-  /* Checkout overlay */
-  .checkout-page {
-    position: fixed;
-    top:0; left:0;
-    width:100%; height:100%;
-    background: rgba(18,18,18,0.95);
-    display:none;
-    justify-content:center;
-    align-items:center;
-    z-index: 1001;
-  }
-  .checkout-page.active { display:flex; }
-
-  .checkout-box {
-    background:#1e1e1e;
-    padding:2rem;
-    border-radius:12px;
-    width:90%;
-    max-width:400px;
-    box-shadow:0 6px 20px rgba(0,0,0,0.6);
-  }
-  .checkout-box h2 { color:#1db954; margin-bottom:1rem; text-align:center;}
-  .checkout-box label { display:block; margin-bottom:6px; font-size:14px; font-weight:bold; color:#ccc;}
-  .checkout-box input { width:100%; padding:10px; margin-bottom:6px; border:1px solid #333; border-radius:6px; background:#2a2a2a; color:#eee;}
-  .StripeElement {
-    padding:10px;
-    border:1px solid #333;
-    border-radius:6px;
-    background:#2a2a2a;
-    color:#eee;
-    margin-bottom:10px;
-  }
-  .error-msg { color:#ff4d4d; font-size:12px; margin-bottom:8px; }
-
-  .checkout-box button { width:100%; padding:12px; background:#1db954; color:#121212; border:none; border-radius:8px; font-weight:bold; cursor:pointer; margin-top:10px;}
-  .checkout-box button:hover { background:#17a64a;}
-
-  .back-btn { display:inline-block; margin-top:10px; text-align:center; background:transparent; border:none; color:#1db954; cursor:pointer; font-size:14px;}
-  .success-msg { text-align:center; color:#1db954; font-size:1.2rem; margin-top:10px;}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Checkout</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+    .checkout-container {
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      width: 400px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    h2 {
+      margin-bottom: 20px;
+      text-align: center;
+    }
+    label {
+      display: block;
+      margin-bottom: 6px;
+      font-weight: bold;
+    }
+    input {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 14px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 14px;
+    }
+    .error {
+      color: red;
+      font-size: 13px;
+      margin-bottom: 10px;
+    }
+    button {
+      width: 100%;
+      padding: 12px;
+      background: #28a745;
+      border: none;
+      border-radius: 6px;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #218838;
+    }
+  </style>
+  <script src="https://js.stripe.com/v3/"></script>
 </head>
 <body>
-
-<!-- Cart Button -->
-<div class="cart-button" id="cartBtn">
-  <svg viewBox="0 0 24 24"><path d="M7 4h-2l-3 7v2h2l3-7h13v2h-12.6l-.7 2h13.3v2h-14l-.7 2h14.7v2h-16.6l1.3-4h-2l-1.3 4h-2v2h3.6c-.3.6-.6 1.3-.6 2 0 2.2 1.8 4 4 4s4-1.8 4-4c0-.7-.2-1.4-.6-2h5.2c-.4.6-.6 1.3-.6 2 0 2.2 1.8 4 4 4s4-1.8 4-4c0-.7-.2-1.4-.6-2h1.6v-2h-16.6l.7-2h14.7v-2h-13.3l.7-2h12.6v-2h-13zm0 16c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm10 0c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"/></svg>
-</div>
-
-<!-- Cart Panel -->
-<div class="cart-panel" id="cartPanel">
-  <div class="cart-header">
-    <span>Your Cart</span>
-    <button class="close-cart" id="closeCart">←</button>
-  </div>
-  <div class="cart-items" id="cartItems">
-    <p>Your cart is empty.</p>
-  </div>
-  <div class="cart-footer">
-    <span id="cartTotal">Total: $10</span>
-    <button class="checkout-btn" id="goCheckout">Checkout</button>
-  </div>
-</div>
-
-<!-- Checkout Page -->
-<div class="checkout-page" id="checkoutPage">
-  <div class="checkout-box">
+  <div class="checkout-container">
     <h2>Checkout</h2>
-    <form id="payment-form">
+    <form id="checkout-form">
       <label for="name">Full Name</label>
-      <input type="text" id="name" required>
+      <input type="text" id="name" required />
+      <div class="error" id="nameError"></div>
 
       <label for="email">Email</label>
-      <input type="email" id="email" required>
+      <input type="email" id="email" required />
+      <div class="error" id="emailError"></div>
 
-      <label>Card Details</label>
-      <div id="card-element" class="StripeElement"></div>
-      <div id="card-errors" class="error-msg"></div>
+      <label>Card Information</label>
+      <div id="card-element"></div>
+      <div class="error" id="cardError"></div>
 
-      <button type="submit">Confirm Purchase</button>
+      <button type="submit">Pay Now</button>
     </form>
-    <button class="back-btn" id="backToCart">← Back to Cart</button>
-    <p class="success-msg" id="successMsg">✅ Purchase Successful!</p>
   </div>
-</div>
 
-<script>
-const cartBtn = document.getElementById('cartBtn');
-const cartPanel = document.getElementById('cartPanel');
-const closeCart = document.getElementById('closeCart');
-const goCheckout = document.getElementById('goCheckout');
-const checkoutPage = document.getElementById('checkoutPage');
-const backToCart = document.getElementById('backToCart');
-const successMsg = document.getElementById('successMsg');
+  <script>
+    const stripe = Stripe("pk_test_51S3WYWRdodBxbaE7gBcJoPExkwRPjal1K33zmv9SjWva2klWYfXGdm4oqyaxHindstK9bUVqA4Brf5oqWONNjZoR00zdISzfGO");
+    const elements = stripe.elements();
+    const cardElement = elements.create("card");
+    cardElement.mount("#card-element");
 
-// open/close cart
-cartBtn.addEventListener('click',()=>cartPanel.classList.add('open'));
-closeCart.addEventListener('click',()=>cartPanel.classList.remove('open'));
+    const form = document.getElementById("checkout-form");
+    const nameInput = document.getElementById("name");
+    const emailInput = document.getElementById("email");
 
-// checkout overlay
-goCheckout.addEventListener('click',()=>{
-  cartPanel.classList.remove('open');
-  checkoutPage.classList.add('active');
-});
-backToCart.addEventListener('click',()=>{
-  checkoutPage.classList.remove('active');
-  cartPanel.classList.add('open');
-});
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
 
-// Stripe setup
-const stripe = Stripe("pk_test_YOUR_PUBLIC_KEY"); // replace with your key
-const elements = stripe.elements();
-const card = elements.create("card", { style: { base: { fontSize: "16px", color: "#eee" } } });
-card.mount("#card-element");
+      let hasError = false;
 
-// handle form submission
-const form = document.getElementById("payment-form");
-form.addEventListener("submit", async (event) => {
-  event.preventDefault();
+      // Name validation
+      if (nameInput.value.trim().length < 5) {
+        document.getElementById("nameError").innerText = "Please enter your full name.";
+        hasError = true;
+      } else {
+        document.getElementById("nameError").innerText = "";
+      }
 
-  const {error, paymentMethod} = await stripe.createPaymentMethod({
-    type: 'card',
-    card: card,
-    billing_details: {
-      name: document.getElementById("name").value,
-      email: document.getElementById("email").value
-    }
-  });
+      // Email validation
+      const emailPattern = /^[^ ]+@[^ ]+\.[a-z]{2,3}$/;
+      if (!emailInput.value.match(emailPattern)) {
+        document.getElementById("emailError").innerText = "Please enter a valid email.";
+        hasError = true;
+      } else {
+        document.getElementById("emailError").innerText = "";
+      }
 
-  if (error) {
-    document.getElementById("card-errors").textContent = error.message;
-  } else {
-    // Normally you'd send paymentMethod.id to your backend for processing
-    successMsg.style.display='block';
-    setTimeout(()=>{
-      checkoutPage.classList.remove('active');
-      successMsg.style.display='none';
-      form.reset();
-    }, 2000);
-  }
-});
-</script>
+      if (hasError) return;
+
+      // Create Payment Method
+      const {error, paymentMethod} = await stripe.createPaymentMethod({
+        type: "card",
+        card: cardElement,
+        billing_details: {
+          name: nameInput.value,
+          email: emailInput.value
+        },
+      });
+
+      if (error) {
+        document.getElementById("cardError").innerText = error.message;
+      } else {
+        alert("✅ Payment method created successfully (Test Mode). Check your Stripe dashboard.");
+        console.log(paymentMethod);
+      }
+    });
+  </script>
 </body>
 </html>
