--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     color: #eee;
   }
 
+  /* Floating Cart Button */
   .cart-button {
     position: fixed;
     top: 50%;
@@ -30,6 +31,7 @@
   .cart-button:hover { background: #17a64a; transform: translateY(-50%) scale(1.05);}
   .cart-button svg { width:28px; height:28px; fill:#121212; }
 
+  /* Cart Panel */
   .cart-panel {
     position: fixed;
     top:0;
@@ -63,6 +65,7 @@
   .checkout-btn { background:#1db954; border:none; color:#121212; font-weight:bold; padding:0.5rem 1rem; border-radius:4px; cursor:pointer;}
   .checkout-btn:hover { background:#17a64a; }
 
+  /* Checkout overlay */
   .checkout-page {
     position: fixed;
     top:0; left:0;
@@ -96,10 +99,12 @@
 </head>
 <body>
 
+<!-- Cart Button -->
 <div class="cart-button" id="cartBtn">
   <svg viewBox="0 0 24 24"><path d="M7 4h-2l-3 7v2h2l3-7h13v2h-12.6l-.7 2h13.3v2h-14l-.7 2h14.7v2h-16.6l1.3-4h-2l-1.3 4h-2v2h3.6c-.3.6-.6 1.3-.6 2 0 2.2 1.8 4 4 4s4-1.8 4-4c0-.7-.2-1.4-.6-2h5.2c-.4.6-.6 1.3-.6 2 0 2.2 1.8 4 4 4s4-1.8 4-4c0-.7-.2-1.4-.6-2h1.6v-2h-16.6l.7-2h14.7v-2h-13.3l.7-2h12.6v-2h-13zm0 16c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm10 0c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"/></svg>
 </div>
 
+<!-- Cart Panel -->
 <div class="cart-panel" id="cartPanel">
   <div class="cart-header">
     <span>Your Cart</span>
@@ -114,6 +119,7 @@
   </div>
 </div>
 
+<!-- Checkout Page -->
 <div class="checkout-page" id="checkoutPage">
   <div class="checkout-box">
     <h2>Checkout</h2>
@@ -153,20 +159,38 @@ const checkoutPage = document.getElementById('checkoutPage');
 const backToCart = document.getElementById('backToCart');
 const checkoutForm = document.getElementById('checkoutForm');
 
-// Cart toggle
-cartBtn.addEventListener('click', ()=>cartPanel.classList.add('open'));
-closeCart.addEventListener('click', ()=>cartPanel.classList.remove('open'));
-goCheckout.addEventListener('click', ()=>{
+// Open/close cart
+cartBtn.addEventListener('click', () => {
+  cartPanel.classList.add('open');
+  cartBtn.style.display = 'none'; // hide button when cart opens
+});
+
+closeCart.addEventListener('click', () => {
+  cartPanel.classList.remove('open');
+  cartBtn.style.display = 'flex'; // show button when cart closes
+});
+
+// Checkout overlay
+goCheckout.addEventListener('click', () => {
   cartPanel.classList.remove('open');
   checkoutPage.classList.add('active');
+  cartBtn.style.display = 'none'; // hide button during checkout
 });
-backToCart.addEventListener('click', ()=>{
+
+backToCart.addEventListener('click', () => {
   checkoutPage.classList.remove('active');
   cartPanel.classList.add('open');
 });
 
+// Reset form and errors whenever checkout is reopened
+checkoutPage.addEventListener('transitionend', () => {
+  checkoutForm.reset();
+  const errors = document.querySelectorAll('.error-msg');
+  errors.forEach(e => e.style.display = 'none');
+});
+
 // Validation
-checkoutForm.addEventListener('submit', e=>{
+checkoutForm.addEventListener('submit', e => {
   e.preventDefault();
   let valid = true;
 
@@ -176,42 +200,35 @@ checkoutForm.addEventListener('submit', e=>{
   const cvv = document.getElementById('cvv');
   const expiry = document.getElementById('expiry');
 
-  // Name validation
-  if(!name.value.trim().includes(' ')){
-    document.getElementById('nameError').style.display='block';
-    valid=false;
-  } else document.getElementById('nameError').style.display='none';
+  // Name validation (at least 2 words)
+  if(!name.value.trim().includes(' ')){document.getElementById('nameError').style.display='block'; valid=false;} else {document.getElementById('nameError').style.display='none';}
 
-  // Email validation
-  const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-  if(!emailRegex.test(email.value)){
-    document.getElementById('emailError').style.display='block';
-    valid=false;
-  } else document.getElementById('emailError').style.display='none';
+  // Email
+  const emailRegex=/^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+  if(!emailRegex.test(email.value)){document.getElementById('emailError').style.display='block'; valid=false;} else {document.getElementById('emailError').style.display='none';}
 
-  // Card validation
-  if(!/^\d{16}$/.test(card.value)){
-    document.getElementById('cardError').style.display='block';
-    valid=false;
-  } else document.getElementById('cardError').style.display='none';
+  // Card
+  if(!/^\d{16}$/.test(card.value)){document.getElementById('cardError').style.display='block'; valid=false;} else {document.getElementById('cardError').style.display='none';}
 
-  // CVV validation
-  if(!/^\d{3}$/.test(cvv.value)){
-    document.getElementById('cvvError').style.display='block';
-    valid=false;
-  } else document.getElementById('cvvError').style.display='none';
+  // CVV
+  if(!/^\d{3}$/.test(cvv.value)){document.getElementById('cvvError').style.display='block'; valid=false;} else {document.getElementById('cvvError').style.display='none';}
 
-  // Expiry validation
-  if(!/^(0[1-9]|1[0-2])\/\d{2}$/.test(expiry.value)){
-    document.getElementById('expiryError').style.display='block';
-    valid=false;
-  } else document.getElementById('expiryError').style.display='none';
+  // Expiry
+  if(!/^(0[1-9]|1[0-2])\/\d{2}$/.test(expiry.value)){document.getElementById('expiryError').style.display='block'; valid=false;} else {document.getElementById('expiryError').style.display='none';}
 
   if(valid){
-    // Form is valid, you can call Stripe API here
-    alert("✅ All fields valid! Ready for Stripe payment.");
+    alert("✅ Form submitted successfully! (No real payment processing)");
     checkoutForm.reset();
+    const errors = document.querySelectorAll('.error-msg');
+    errors.forEach(e => e.style.display = 'none');
+    checkoutPage.classList.remove('active');
+    cartBtn.style.display = 'flex'; // show cart button after closing checkout
   }
+});
+</script>
+</body>
+</html>
+
 });
 </script>
 </body>
