--- a/index.html
+++ b/index.html
@@ -3,152 +3,151 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>AceNodes Cart + Checkout</title>
+<title>AceNodes Shop</title>
 <style>
-body {
-  margin: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: #121212;
-  color: #eee;
-}
+  body {
+    margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: #121212;
+    color: #eee;
+    overflow-x: hidden;
+  }
 
-/* Floating Cart Button */
-.cart-button {
-  position: fixed;
-  top: 50%;
-  right: 20px;
-  transform: translateY(-50%);
-  background: #1db954;
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  z-index: 1000;
-  opacity: 1;
-  transition: opacity 0.3s ease;
-}
-.cart-button.hidden { opacity: 0; pointer-events: none; }
-.cart-button:hover { background: #17a64a; transform: translateY(-50%) scale(1.05);}
-.cart-button svg { width:28px; height:28px; fill:#121212; }
+  /* Floating Cart Button */
+  .cart-button {
+    position: fixed;
+    top: 50%;
+    right: -80px; /* start offscreen */
+    transform: translateY(-50%);
+    background: #1db954;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    z-index: 1000;
+    transition: right 0.6s ease, transform 0.3s ease;
+  }
+  .cart-button:hover { transform: translateY(-50%) scale(1.05); background:#17a64a;}
+  .cart-button svg { width:28px; height:28px; fill:#121212; }
+  .cart-button.show { right: 20px; }
 
-/* Cart Panel */
-.cart-panel {
-  position: fixed;
-  top:0;
-  right:-320px;
-  width:300px;
-  height:100%;
-  background:#1e1e1e;
-  box-shadow:-2px 0 10px rgba(0,0,0,0.7);
-  display:flex;
-  flex-direction:column;
-  transition: right 0.4s ease;
-  z-index: 900;
-}
-.cart-panel.open { right:0; }
+  /* Cart Panel */
+  .cart-panel {
+    position: fixed;
+    top:0;
+    right:-320px;
+    width:300px;
+    height:100%;
+    background:#1e1e1e;
+    box-shadow:-2px 0 10px rgba(0,0,0,0.7);
+    display:flex;
+    flex-direction:column;
+    transition: right 0.3s ease;
+    z-index: 900;
+  }
+  .cart-panel.open { right:0; }
 
-.cart-header {
-  background:#1db954;
-  color:#121212;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:1rem;
-  font-weight:bold;
-}
-.close-cart { background:transparent; border:none; font-size:1.4rem; color:#121212; cursor:pointer; }
+  .cart-header {
+    background:#1db954;
+    color:#121212;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    padding:1rem;
+    font-weight:bold;
+  }
+  .close-cart { background:transparent; border:none; font-size:1.4rem; color:#121212; cursor:pointer; }
 
-.cart-items { flex-grow:1; padding:1rem; overflow-y:auto;}
-.cart-items p { color:#ccc; font-size:0.95rem; }
+  .cart-items { flex-grow:1; padding:1rem; overflow-y:auto;}
+  .cart-items p { color:#ccc; font-size:0.95rem; }
 
-.cart-footer { padding:1rem; border-top:1px solid #333; display:flex; justify-content:space-between; align-items:center;}
-.checkout-btn { background:#1db954; border:none; color:#121212; font-weight:bold; padding:0.5rem 1rem; border-radius:4px; cursor:pointer;}
-.checkout-btn:hover { background:#17a64a; }
+  .cart-footer { padding:1rem; border-top:1px solid #333; display:flex; justify-content:space-between; align-items:center;}
+  .checkout-btn { background:#1db954; border:none; color:#121212; font-weight:bold; padding:0.5rem 1rem; border-radius:4px; cursor:pointer;}
+  .checkout-btn:hover { background:#17a64a; }
 
-/* Checkout overlay */
-.checkout-page {
-  position: fixed;
-  top:0; left:0;
-  width:100%; height:100%;
-  background: rgba(18,18,18,0.95);
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.4s ease;
-  z-index: 1001;
-}
-.checkout-page.active { opacity: 1; visibility: visible; }
+  /* Checkout overlay */
+  .checkout-page {
+    position: fixed;
+    top:0; left:0;
+    width:100%; height:100%;
+    background: rgba(18,18,18,0.95);
+    display:none;
+    justify-content:center;
+    align-items:center;
+    z-index: 1001;
+    opacity:0;
+    transition: opacity 0.4s ease;
+  }
+  .checkout-page.active { display:flex; opacity:1; }
 
-.checkout-box {
-  background:#1e1e1e;
-  padding:2rem;
-  border-radius:12px;
-  width:90%;
-  max-width:400px;
-  box-shadow:0 6px 20px rgba(0,0,0,0.6);
-}
-.checkout-box h2 { color:#1db954; margin-bottom:1rem; text-align:center;}
-.checkout-box label { display:block; margin-bottom:6px; font-size:14px; font-weight:bold; color:#ccc;}
-.checkout-box input { width:100%; padding:10px; margin-bottom:6px; border:1px solid #333; border-radius:6px; background:#2a2a2a; color:#eee;}
-.error-msg { color:#ff4d4d; font-size:12px; margin-bottom:8px; display:none;}
+  .checkout-box {
+    background:#1e1e1e;
+    padding:2rem;
+    border-radius:12px;
+    width:90%;
+    max-width:400px;
+    box-shadow:0 6px 20px rgba(0,0,0,0.6);
+  }
+  .checkout-box h2 { color:#1db954; margin-bottom:1rem; text-align:center;}
+  .checkout-box label { display:block; margin-bottom:6px; font-size:14px; font-weight:bold; color:#ccc;}
+  .checkout-box input { width:100%; padding:10px; margin-bottom:6px; border:1px solid #333; border-radius:6px; background:#2a2a2a; color:#eee;}
+  .error-msg { color:#ff4d4d; font-size:12px; margin-bottom:8px; display:none;}
 
-.checkout-box button { width:100%; padding:12px; background:#1db954; color:#121212; border:none; border-radius:8px; font-weight:bold; cursor:pointer; margin-top:10px;}
-.checkout-box button:hover { background:#17a64a;}
+  .checkout-box button { width:100%; padding:12px; background:#1db954; color:#121212; border:none; border-radius:8px; font-weight:bold; cursor:pointer; margin-top:10px;}
+  .checkout-box button:hover { background:#17a64a;}
+  .back-btn { display:inline-block; margin-top:10px; text-align:center; background:transparent; border:none; color:#1db954; cursor:pointer; font-size:14px;}
 
-.back-btn { display:inline-block; margin-top:10px; text-align:center; background:transparent; border:none; color:#1db954; cursor:pointer; font-size:14px;}
+  /* Success page */
+  .success-page {
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:#121212;
+    color:#1db954;
+    display:none;
+    justify-content:center;
+    align-items:center;
+    font-size:3rem;
+    z-index:2000;
+    text-align:center;
+    flex-direction:column;
+    animation: fadeIn 0.8s ease forwards;
+  }
 
-/* Success page */
-.success-page {
-  position: fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  background:#121212;
-  color:#1db954;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  font-size:3rem;
-  z-index:2000;
-  text-align:center;
-  flex-direction:column;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.5s ease;
-}
-.success-page.active { opacity: 1; visibility: visible; }
+  @keyframes fadeIn {
+    0% { opacity:0; transform:scale(0.9);}
+    100% { opacity:1; transform:scale(1);}
+  }
 
-@keyframes fadeIn {
-  0% { opacity:0; transform:scale(0.9);}
-  100% { opacity:1; transform:scale(1);}
-}
-
-/* Confetti */
-.confetti {
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background: #1db954;
-  top:0;
-  animation: confettiFall 3s linear forwards;
-}
-@keyframes confettiFall {
-  0% { transform: translateY(0) rotate(0deg);}
-  100% { transform: translateY(100vh) rotate(360deg);}
-}
+  /* Confetti */
+  .confetti {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background: #1db954;
+    top:0;
+    animation: confettiFall 3s linear forwards;
+  }
+  @keyframes confettiFall {
+    0% { transform: translateY(0) rotate(0deg);}
+    100% { transform: translateY(100vh) rotate(360deg);}
+  }
 </style>
 </head>
 <body>
 
-<!-- Cart Button -->
+<h1 style="text-align:center; margin-top:50px;">Welcome to AceNodes</h1>
+
+<!-- Floating Cart Button -->
 <div class="cart-button" id="cartBtn">
-  <svg viewBox="0 0 24 24"><path d="M7 4h-2l-3 7v2h2l3-7h13v2h-12.6l-.7 2h13.3v2h-14l-.7 2h14.7v2h-16.6l1.3-4h-2l-1.3 4h-2v2h3.6c-.3.6-.6 1.3-.6 2 0 2.2 1.8 4 4 4s4-1.8 4-4c0-.7-.2-1.4-.6-2h5.2c-.4.6-.6 1.3-.6 2 0 2.2 1.8 4 4 4s4-1.8 4-4c0-.7-.2-1.4-.6-2h1.6v-2h-16.6l.7-2h14.7v-2h-13.3l.7-2h12.6v-2h-13zm0 16c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm10 0c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"/></svg>
+  <svg viewBox="0 0 24 24">
+    <path d="M7 4h-2l-3 7v2h2l3-7h13v2h-12.6l-.7 2h13.3v2h-14l-.7 2h14.7v2h-16.6l1.3-4h-2l-1.3 4h-2v2h3.6c-.3.6-.6 1.3-.6 2 0 2.2 1.8 4 4 4s4-1.8 4-4c0-.7-.2-1.4-.6-2h5.2c-.4.6-.6 1.3-.6 2 0 2.2 1.8 4 4 4s4-1.8 4-4c0-.7-.2-1.4-.6-2h1.6v-2h-16.6l.7-2h14.7v-2h-13.3l.7-2h12.6v-2h-13zm0 16c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm10 0c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"/>
+  </svg>
 </div>
 
 <!-- Cart Panel -->
@@ -213,17 +212,22 @@ const backToCart = document.getElementById('backToCart');
 const checkoutForm = document.getElementById('checkoutForm');
 const successPage = document.getElementById('successPage');
 
-// open/close cart
+// Slide in cart button on load
+window.addEventListener('DOMContentLoaded', () => {
+  setTimeout(()=>cartBtn.classList.add('show'), 300);
+});
+
+// Open/close cart
 cartBtn.addEventListener('click',()=>{
   cartPanel.classList.add('open');
-  cartBtn.classList.add('hidden'); // hide cart button when panel open
+  cartBtn.style.display='none'; // hide when cart panel is open
 });
 closeCart.addEventListener('click',()=>{
   cartPanel.classList.remove('open');
-  cartBtn.classList.remove('hidden');
+  cartBtn.style.display='flex'; // show again when closed
 });
 
-// checkout overlay
+// Checkout overlay
 goCheckout.addEventListener('click',()=>{
   cartPanel.classList.remove('open');
   checkoutPage.classList.add('active');
@@ -231,12 +235,15 @@ goCheckout.addEventListener('click',()=>{
 backToCart.addEventListener('click',()=>{
   checkoutPage.classList.remove('active');
   cartPanel.classList.add('open');
+  checkoutForm.reset();
+  document.querySelectorAll('.error-msg').forEach(e=>e.style.display='none');
 });
 
-// form validation and success
+// Form validation and success
 checkoutForm.addEventListener('submit', e=>{
   e.preventDefault();
   let valid=true;
+
   const name=document.getElementById('name');
   const email=document.getElementById('email');
   const card=document.getElementById('card');
@@ -252,12 +259,11 @@ checkoutForm.addEventListener('submit', e=>{
 
   if(valid){
     checkoutPage.classList.remove('active');
-    successPage.classList.add('active');
-
+    successPage.style.display='flex';
     checkoutForm.reset();
     document.querySelectorAll('.error-msg').forEach(e=>e.style.display='none');
 
-    // create simple confetti
+    // Confetti
     for(let i=0;i<50;i++){
       const confetti = document.createElement('div');
       confetti.classList.add('confetti');
@@ -272,8 +278,9 @@ checkoutForm.addEventListener('submit', e=>{
 
 // Back to shop button
 document.getElementById('backToShop').addEventListener('click',()=>{
-  successPage.classList.remove('active');
-  cartBtn.classList.remove('hidden');
+  successPage.style.display='none';
+  cartBtn.style.display='flex';
+  cartPanel.classList.remove('open');
 });
 </script>
 </body>
