--- a/cart-system.html
+++ b/cart-system.html
@@ -1,3 +1,5 @@
+the only thing i have is my cart system you have to help me make it stick
+here is my cart system
 <!DOCTYPE html>
 <html lang="en">
 <head>
